# fpgrowth-master

./: 5000-out1.csv  CMakeLists.txt  Database.h  Header.cpp  Header.h  ItemSet.cpp  ItemSet.h  Transaction.h  TreeElement.cpp  TreeElement.h  db1000.txt  db4.txt  fpgrowth.cpp  fpgrowth.h  hElement.cpp  hElement.h  io_manager.cpp  io_manager.h  main.cpp
